--- a/app.yaml
+++ b/app.yaml
@@ -25,6 +25,8 @@ handlers:
 # Handler for dir containing plugins
 - url: /plugins
   static_dir: plugins
+
+# Handler for dir with static files
 - url: /static
   static_dir: static
 
